--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "swagger": "^0.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
